--- a/RektaRetailApp.Web/RektaRetailApp.Web.csproj
+++ b/RektaRetailApp.Web/RektaRetailApp.Web.csproj
@@ -29,26 +29,38 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="3.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="morelinq" Version="3.3.2" />
+    <PackageReference Include="Npgsql" Version="4.1.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.5" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="%2a%2a\**" />
     <Compile Remove="ClientApp\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="%2a%2a\**" />
     <Content Remove="ClientApp\**" />
+    <EmbeddedResource Remove="%2a%2a\**" />
     <EmbeddedResource Remove="ClientApp\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="%2a%2a\**" />
     <None Remove="ClientApp\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Remove="%2a%2a\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,20 +81,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RektaRetailApp.Domain\RektaRetailApp.Domain.csproj" />
+    <TypeScriptCompile Remove="%2a%2a\%2a.ts" />
+    <TypeScriptCompile Remove="%2a%2a\%2a.tsx" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\src\pages\suppliers\" />
-    <Folder Include="ClientApp\src\pages\shifts\" />
-    <Folder Include="ClientApp\src\pages\sales\" />
-    <Folder Include="ClientApp\src\pages\products\" />
-    <Folder Include="DomainEvents\Inventory\" />
-    <Folder Include="DomainEvents\Sales\" />
-    <Folder Include="Validations\Inventory\" />
-    <Folder Include="Validations\Category\" />
-    <Folder Include="Validations\Customer\" />
-    <Folder Include="Validations\Sales\" />
+    <ProjectReference Include="..\RektaRetailApp.Domain\RektaRetailApp.Domain.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
