--- a/RektaRetailApp.Web/RektaRetailApp.Web.csproj
+++ b/RektaRetailApp.Web/RektaRetailApp.Web.csproj
@@ -39,6 +39,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="morelinq" Version="3.3.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Npgsql" Version="4.1.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.5" />
